Ensure all content about the artwork wraps.
This prevents content from overflowing off the screen and also fixes a bug on mobile where the window zoom is too small due to the overflowed content.

--- a/src/styles/GenerativeTokenDetails.module.scss
+++ b/src/styles/GenerativeTokenDetails.module.scss
@@ -19,10 +19,8 @@
 }
 
 .presentation-details {
-  .presentation-title {
-    overflow-wrap: break-word;
-    word-break: break-word;
-  }
+  overflow-wrap: break-word;
+  word-break: break-word;
 
   &.inline {
     flex-grow: 2;
